controls/C-0073/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "kubescape-c-0073-deny-naked-pods"
  labels:
    controlId: "C-0073"
  annotations:
    controlUrl: "https://hub.armosec.io/docs/c-0073"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: "object.kind != 'Pod' || has(object.metadata.ownerReferences)"
      message: "Pods doesn't have a parent! (see more at https://hub.armosec.io/docs/c-0073)"
